--- a/.github/workflows/createPR.yml
+++ b/.github/workflows/createPR.yml
@@ -1,10 +1,10 @@
 name: hello-world
 on: 
-  workflow_dispatch
+  push
   
 jobs:
   my-job:
-    runs-on: self-hosted
+    runs-on: macOS-latest
     steps:
       - name: my-step
         run: echo "Hello World!"
